# realworld-rust-axum-sqlx

./: .editorconfig  .env.docker  .env.example  .gitattributes  .gitignore  Cargo.toml  LICENSE  Makefile  Makefile.toml  README.md  Trunk.toml  cobertura.xml  commitlint.config.js  cypress.config.ts  docker-compose.conduit.yml  docker-compose.metrics.yml  docker-compose.postgres.yml  fly.toml  package-lock.json  package.json  prometheus.yml  rustfmt.toml  tsconfig.json
.github/workflows/: ci.yml  coverage.yml
.husky/: commit-msg  pre-commit
conduit-api/: Cargo.toml
conduit-api/src/: errors.rs  lib.rs  main.rs  request_validator.rs  router.rs
conduit-api/src/articles/: mod.rs
conduit-api/src/endpoints/: articles_endpoints.rs  mod.rs  profiles_endpoints.rs  tags_endpoints.rs  users_endpoints.rs
conduit-api/src/extractors/: authentication_extractor.rs  mod.rs  optional_authentication_extractor.rs  required_authentication_extractor.rs
conduit-api/src/profiles/: endpoints.rs  mod.rs
conduit-api/src/users/: endpoints.rs  mod.rs
conduit-bin/: Cargo.toml
conduit-bin/src/: Dockerfile  main.rs
conduit-core/: Cargo.toml
conduit-core/src/: config.rs  errors.rs  lib.rs  routes.rs
conduit-core/src/articles/: mod.rs  repository.rs  service.rs
conduit-core/src/comments/: repository.rs  service.rs
conduit-core/src/infrastructure/: connection_pool.rs  mod.rs  service_register.rs
conduit-core/src/profiles/: repository.rs  service.rs
conduit-core/src/services/: security_service.rs  token_service.rs
conduit-core/src/tags/: mod.rs  repository.rs  service.rs
conduit-core/src/users/: mod.rs  repository.rs  router.rs  service.rs
conduit-core/src/utils/: mod.rs  security_service.rs  unit_of_work.rs
conduit-domain/: Cargo.toml
conduit-domain/src/: lib.rs
conduit-domain/src/articles/: models.rs  requests.rs  responses.rs
conduit-domain/src/comments/: mod.rs  responses.rs
conduit-domain/src/profiles/: mod.rs  responses.rs
conduit-domain/src/tags/: mod.rs
conduit-domain/src/users/: mod.rs  models.rs  requests.rs  responses.rs
conduit-infrastructure/: Cargo.toml  sqlx-data.json
conduit-infrastructure/migrations/: 20220411052503_initial.sql  20220610234429_add_user_follows.sql  20220610234831_add_user_favorites.sql  20220613214350_add_articles.sql  20220617192340_add_comments.sql
conduit-infrastructure/queries/: get_article_by_slug.sql  get_articles.sql  insert_article.sql  update_article.sql
conduit-infrastructure/src/: connection_pool.rs  lib.rs  service_register.rs
conduit-infrastructure/src/repositories/: articles_repository.rs  comments_repository.rs  mod.rs  profiles_repository.rs  tags_repository.rs  user_repository.rs  users_repository.rs
conduit-infrastructure/src/services/: argon_security_service.rs  mod.rs  users_service.rs
conduit-infrastructure/src/services/features/: articles_service.rs  comments_service.rs  mod.rs  profiles_service.rs  profiles_service_test.rs  users_service.rs  users_service_test.rs
conduit-infrastructure/src/services/features/specs/: fixtures.rs  profiles_service_add_user_follow_should.rs  profiles_service_get_profile_should.rs  users_service_register_user_should.rs
conduit-infrastructure/src/services/utils/: argon_security_service.rs  conduit_seed_service.rs  jwt_service.rs  mod.rs  postgres_unit_of_work.rs
conduit-repository/: Cargo.toml
conduit-repository/src/: lib.rs  user_repository.rs
conduit-shared/: Cargo.toml
conduit-shared/src/: config.rs  context.rs  lib.rs
conduit-utilities/: Cargo.toml
conduit-utilities/src/: config.rs  context.rs
conduit-web/: Cargo.toml  index.html
conduit-web/src/: app.rs  main.rs  router.rs
conduit-web/src/components/: footer.rs  mod.rs  navbar.rs
conduit-web/src/pages/: login.rs  mod.rs  register.rs
crates/conduit-api/: Cargo.toml
crates/conduit-api/src/: router.rs
crates/conduit-bin/: Cargo.toml
crates/conduit-bin/src/: Dockerfile  main.rs
crates/conduit-core/: Cargo.toml
crates/conduit-core/src/: config.rs  errors.rs  lib.rs
crates/conduit-domain/: Cargo.toml
crates/conduit-domain/src/: lib.rs
crates/conduit-domain/src/articles/: models.rs  requests.rs  responses.rs
crates/conduit-domain/src/comments/: mod.rs  requests.rs  responses.rs
crates/conduit-domain/src/profiles/: mod.rs  responses.rs
crates/conduit-domain/src/tags/: responses.rs
crates/conduit-domain/src/users/: mod.rs  requests.rs  responses.rs
crates/conduit-infrastructure/: Cargo.toml  sqlx-data.json
crates/conduit-infrastructure/migrations/: 20220411052503_initial.sql  20220610234429_add_user_follows.sql  20220610234831_add_user_favorites.sql  20220617192340_add_comments.sql
crates/conduit-infrastructure/queries/: get_articles.sql  insert_article.sql
crates/conduit-web/: Cargo.toml
crates/conduit-web/src/: Dockerfile  app.rs  main.rs  router.rs
crates/conduit-web/src/components/: active_link.rs  article_preview.rs  article_previews.rs  authentication_error_list.rs  authentication_form.rs  author_profile_meta.rs  comment_card.rs  comments_container.rs  feed_toggle.rs  mod.rs  navbar.rs  tag_list.rs
crates/conduit-web/src/contexts/: article_context.rs  articles_context.rs  authentication_context.rs  mod.rs
crates/conduit-web/src/hooks/: mod.rs  use_article_editor.rs  use_authentication_hook.rs  use_query.rs  use_query.rs_  use_selected_article.rs  use_selected_articles.rs  use_settings.rs
crates/conduit-web/src/pages/: article.rs  editor.rs  home.rs  login.rs  mod.rs  profile.rs  register.rs  settings.rs
crates/conduit-web/src/services/: article_service.rs  authentication_service.rs  mod.rs  profile_service.rs
crates/conduit-web/src/utilities/: errors.rs  formatting.rs  http.rs  mod.rs  params.rs  storage.rs
cypress/: .eslintrc.json
deploy/: docker-compose.conduit-bin.yml  docker-compose.conduit-web.yml  docker-compose.metrics.yml  docker-compose.postgres.yml
integrations/: Conduit.postman_collection.json
src/: Dockerfile  errors.rs  main.rs
src/lib/: mod.rs  routes.rs
src/lib/users/: mod.rs  repository.rs  (+2 more)
tests/: run-postman-tests.sh
(+39 files in other folders)
