[package]
name = "realworld-rust-axum-sqlx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres"] }
axum = { version = "0.5.1", features = ["tower-log"] }
tokio = { version = "1.17.0", features = ["full"] }
serde = { version = "1.0.136", features = ["derive"] }
rust-argon2 = "0.4.0"
jwt = "0.16.0"
dotenv = "0.15.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0.32"
hyper = "0.13.8"
validator = "0.14.0"
uuid = "1.0.0"