[package]
name = "conduit-api"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conduit-core = { path = "../conduit-core" }
conduit-domain = { path = "../conduit-domain" }
conduit-infrastructure = { path = "../conduit-infrastructure" }

sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres"] }
axum = { version = "0.5.1", features = ["tower-log"] }
tokio = { version = "1.17.0", features = ["full"] }
clap = "3"
dotenv = "0.15.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
serde = { version = "1.0.136", features = ["derive"] }
validator = { version = "0.15", features = ["derive"] }
async-trait = "0.1"
http = "0.2"
http-body = "0.4.3"
serde_json = "1.0.81"
thiserror = "1"
lazy_static = "1.4"

metrics = "0.18"
metrics-exporter-prometheus = "0.8"

# tower crates for HTTP middleware
tower = { version = "0.4", features = ["timeout"] }
tower-http = { version = "0.1", features = ["trace"] }
