[package]
name = "conduit-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conduit-api = { path = "../conduit-api" }
conduit-domain = { path = "../conduit-domain" }
conduit-utilities = { path = "../conduit-utilities" }
conduit-core = { path = "../conduit-core" }
conduit-infrastructure = { path = "../conduit-infrastructure" }

sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres"] }
axum = { version = "0.5.1", features = ["tower-log"] }
tokio = { version = "1.17.0", features = ["full"] }
clap = "3"
dotenv = "0.15.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
