[package]
name = "conduit-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conduit-domain = { path = "../conduit-domain" }
conduit-utilities = { path = "../conduit-utilities" }

# axum HTTP dependencies
tokio = { version = "1", features = ["full"] }

# utilty crates
serde = { version = "1.0.136", features = ["derive"] }
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "time"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.81"
rust-argon2 = "0.4.0"
jwt = "0.16.0"
dotenv = "0.15.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
validator = { version = "0.15", features = ["derive"] }
async-trait = "0.1"
thiserror = "1"