[package]
name = "conduit-domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
validator = {version = "0.15", features = ["derive"]}
thiserror = "1.0"
async-trait = "0.1"
anyhow = "1"