[package]
name = "conduit-infrastructure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conduit-domain = { path = "../conduit-domain" }
conduit-core = { path = "../conduit-core" }

sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "time"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
anyhow = "1"