[package]
name = "conduit-infrastructure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conduit-core = { path = "../conduit-core" }
conduit-domain = { path = "../conduit-domain" }

sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "time"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
anyhow = "1"
tracing = "0.1"
rust-argon2 = "1.0"
jsonwebtoken = "8"
mockall = "0.11.1"
lazy_static = "1.4.0"
slug = "0.1.4"
itertools = "0.10.2"

# If you do not need pem decoding, you can disable the default feature `use_pem` that way:
# jsonwebtoken = {version = "8", default-features = false }
serde = { version = "1.0", features = ["derive"] }
time = "0.3"