[package]
name = "conduit-web"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
log = "0.4.6"
wasm-logger = "0.2.0"
dotenv = "0.15.0"
anyhow = "1"
yew-router = "0.16"