[package]
name = "conduit-web"
version = "0.1.0"
edition = "2021"
license-file = "../../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
conduit-domain = { path = "../conduit-domain" }

yew = "0.19"
yew-router = "0.16"
log = "0.4.6"
wasm-logger = "0.2.0"
dotenv = "0.15.0"
gloo = "0.7.0"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
gloo-utils = "0.1"
web-sys = { version = "0.3", features = [ "Headers", "Request", "RequestInit", "RequestMode", "Response", "Window" ]}
js-sys = "0.3.55"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"
anyhow = "1"
thiserror = "1"